# saveloop

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
briefs/: sun_carousel.txt  wed_reel.txt
config/: experiments.yaml  metrics.yaml  settings.yaml
data/processed/: content_bundles.csv  pattern_performance.csv  post_history.json  post_plans.json  posts_log_with_metrics.csv  tag_performance.csv
data/raw/: experiments_backlog.csv  hashtag_packs.csv  posts_log.csv  trends_snapshot.csv
data/reports/: weekly_summary.md
saveloop/: cli.py  config.py  metrics.py  reporting.py
saveloop/analysis/: experiments.py  pattern_analysis.py  recommendations.py  tag_analysis.py
saveloop/bundles/: __init__.py  generator.py  writer.py
saveloop/generation/: __init__.py  carousel_renderer.py  color_schemes.py  image_generator.py  image_provider.py  local_image_provider.py  music_selector.py  post_assembler.py  post_history.py  prompt_builder.py  script_generator.py  text_provider.py  weekly_planner.py  zip_exporter.py
saveloop/io/: loaders.py  validation.py  writers.py
saveloop/metrics/: aggregations.py  core.py  derived.py
saveloop/models/: bundle.py  experiment.py  post.py  report.py  trend.py
saveloop/reporting/: markdown.py  weekly_summary.py
saveloop/trends/: __init__.py  fetchers.py  scoring.py
saveloop/ui/: app.py
scripts/: run_analysis.sh
tests/: test_metrics.py
