[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "saveloop"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "streamlit>=1.40.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["saveloop*"]
